--- a/docs/_sass/minima/_base.scss
+++ b/docs/_sass/minima/_base.scss
@@ -68,6 +68,12 @@ img {
   vertical-align: middle;
 }
 
+.diagram {
+  display: block;
+  max-width: 90%;
+  margin: 2rem auto;
+  vertical-align: middle;
+}
 
 
 /**
