--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -29,6 +29,8 @@
     -fx-font-family: "Segoe UI Semibold";
 }
 
+/*Table styling adapted from
+https://github.com/AY1920S1-CS2103T-T13-3/main*/
 .tab-label {
     -fx-text-fill: white;
 }
