Add css credits

--- a/docs/_sass/minima/_layout.scss
+++ b/docs/_sass/minima/_layout.scss
@@ -266,6 +266,7 @@
 
 /**
  * Table of Content without bullet points
+  * CSS Adapted from https://github.com/AY2021S1-CS2103T-W16-3/tp/pull/179/commits/aec461182c194c9ca2c67d7c407fcabb376191ff
  */
 .toc-no-bullet-points ul, .toc-no-bullet-points ol {
   list-style-type: none;
