--- a/src/main/resources/view/HelpWindow.fxml
+++ b/src/main/resources/view/HelpWindow.fxml
@@ -41,7 +41,8 @@
                 </HBox>
                 <Label styleClass="tableHeader" text="General:">
                 </Label>
-                <!--Solution below adapted from https://github.com/AY2021S1-CS2103T-W15-3/tp/blob/master/src/main/resources/view/HelpWindow.fxml-->
+                <!-- @@author nweiyue-reused -->
+                <!-- Reused from https://github.com/AY2021S1-CS2103T-W15-3/tp/blob/master/src/main/resources/view/HelpWindow.fxml with minor modifications-->
                 <TableView id="generalCommandTable" fx:id="generalCommandTable" stylesheets="@DarkTheme.css" VBox.vgrow="SOMETIMES" focusTraversable="false">
                     <columns>
                         <TableColumn styleClass="actionColumn" editable="false" minWidth="200.0" prefWidth="-1.0" text="Action" sortable="false">
@@ -159,7 +160,7 @@
                         <Insets />
                     </opaqueInsets>
                 </TableView>
-
+                <!-- @@author -->
                 <HBox alignment="CENTER">
                     <children>
                         <Label fx:id="linkMessage" text="Label">
