--- a/docs/_sass/minima/_base.scss
+++ b/docs/_sass/minima/_base.scss
@@ -271,8 +271,8 @@ table {
   }
 }
 
-@media print {
-  div, body, table{
-    break-inside: avoid;
-  }
-}
+//@media print {
+//  body, table{
+//    break-inside: avoid;
+//  }
+//}
